--- a/app/public/wp-content/themes/misrecetas/css/image.css
+++ b/app/public/wp-content/themes/misrecetas/css/image.css
@@ -8,3 +8,13 @@
     width: 400px;
     height: auto;
 }
+
+.img-xs {
+    width:100%;
+    height: 15vh;
+    object-fit: cover;
+}
+.img-link:hover {
+    filter:brightness(70%);
+    transition: all .5s ease;
+} 
