--- a/app/public/wp-content/themes/misrecetas/css/links.css
+++ b/app/public/wp-content/themes/misrecetas/css/links.css
@@ -1,9 +1,10 @@
 
 .lnk-nm {
    
-    color: rgb(19, 88, 131);
+    color: black);
 }
 
 .lnk-nm:hover {
     text-decoration: underline;
+    color:cornflowerblue;
 } 
